# blenderNew

./: .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG_CN.md  CONTRIBUTING.md  LICENSE  ONBOARDING.md  README.md  README_CN.md  RELEASE_NOTES.md  enhance_skill_docs.py  pyproject.toml
assets/: cyberCar_prompt.md  iphone-17-pro.txt  prompt_test.md  prompt_test_extern.md
blender_provider/: SKILL.md  SKILL_NEW_SKILLS_APPENDIX.md  __init__.py  addon_vbf_ws.py  skill_runtime.py  skills.py  start_vbf_blender.py
client/: __init__.py  llm_adapter.py  main.py  protocol.py  ws_client.py
docs/: to_do_plan.md  覆盖率.md
tests/: conftest.py  test_agent.py  test_blender_51_api_docs_compat.py  test_cli_prompt_tokens.py  test_client_capabilities.py  test_client_plan_gate.py  test_client_plan_retry.py  test_client_replan_loop_guard.py  test_client_scene_capture.py  test_client_two_stage_planning.py  test_config_runtime.py  test_feedback_control_errors.py  test_feedback_loop.py  test_feedback_system.py  test_jsonrpc_ws.py  test_llm_cache.py  test_llm_integration.py  test_llm_rate_limiter.py  test_llm_repair_stage_reset.py  test_low_level_gateway_config.py  test_openai_compat_adapter_response_format.py  test_plan_normalization.py  test_plan_reference_validation.py  test_run_logging.py  test_skill_capability_resolver.py  test_skill_schema_injection.py  test_stage_system.py  test_streaming_chat_completion_aggregator.py  test_style_templates.py  test_system.py  test_task_ledger.py
utils/: analyze_mapping.py  extract_skills.py  merge_skills.py  pic_base64.py  verify_skill_md.py
(+185 files in other folders)
